[package]
name = "lastfm-parse-rs"
version = "0.2.0"
description = "Collection of serde-based data types for Lastfm API"
authors = ["xenzh <xenzh0@gmail.com>"]

[dependencies]
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
url = "1.*"

[dev-dependencies]
futures = "0.1"
tokio-core = "0.1"
hyper = "*"
async-http-client = { git = "https://github.com/xenzh/async-http-client" }