[package]
name = "lastfm-parse-rs"
version = "0.2.0"
description = "Collection of serde-based data types for Lastfm API"
repository = "https://github.com/xenzh/lastfm-parse-rs"
license = "MIT"
authors = ["xenzh <xenzh0@gmail.com>"]
exclude = [
    "docs/*",
    "tests/*"
]

[dependencies]
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
url = "1.*"

[dev-dependencies]
async-http-client = { git = "https://github.com/xenzh/async-http-client" }