[package]
name = "lastfm-parse-rs"
version = "0.2.1"
description = "Collection of serde-based data types for Lastfm API"
readme = "README.md"
documentation = "https://xenzh.github.io/lastfm-parse-rs/"
repository = "https://github.com/xenzh/lastfm-parse-rs"
keywords = ["lastfm", "last-fm", "api"]
license = "MIT"
authors = ["xenzh <xenzh0@gmail.com>"]
exclude = [
    "docs/*",
    "tests/*"
]

[dependencies]
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
url = "1.*"
md5 = "0.3"

[dev-dependencies]
async-http-client = { git = "https://github.com/matt2xu/async-http-client" }
